WriterとTranslator実装+IO修正